<resources>
    <string name="app_name">CEP</string>
    <string name="search">Buscar</string>
    <string name="public_place">Logradouro:</string>
    <string name="neighborhood">Bairro:</string>
    <string name="city">Cidade:</string>
    <string name="uf">UF:</string>
    <string name="ddd">DDD:</string>
    <string name="state">Estado:</string>
    <string name="state_short">Estado (Sigla):</string>
    <string name="street">Rua:</string>
    <string name="clear">Limpar</string>
    <string name="cep">CEP:</string>
    <string name="addres_not_found">Nenhum endereço encontrado.</string>
    <string name="type_cep">Digite o CEP</string>
    <string name="type_state">Digite a sigla do estado</string>
    <string name="type_city">Digite no mínimo 3 letras</string>
    <string name="type_street">Digite no mínimo 3 letras</string>
</resources>