<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBackground1"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBackground2"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBackground1" />

    <EditText
        android:id="@+id/txtCep"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Digite o CEP"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/btnAddress"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddress"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/search"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCep" />

    <EditText
        android:id="@+id/txtState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtCity"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.647" />

    <EditText
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/txtState"
        app:layout_constraintStart_toStartOf="@+id/txtState"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <EditText
        android:id="@+id/txtStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/txtCity"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtCity"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.647" />

    <Button
        android:id="@+id/btnCep"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStreet" />

    <TextView
        android:id="@+id/lblStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/public_place"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/lblNeighborhood"
        app:layout_constraintEnd_toStartOf="@+id/tvStreet"
        app:layout_constraintStart_toStartOf="@+id/tvBackground1"
        app:layout_constraintTop_toBottomOf="@+id/txtCep" />

    <TextView
        android:id="@+id/tvStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/lblStreet"
        app:layout_constraintEnd_toStartOf="@+id/lblState"
        app:layout_constraintStart_toEndOf="@+id/lblStreet"
        app:layout_constraintTop_toTopOf="@+id/lblStreet" />

    <TextView
        android:id="@+id/lblState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/uf"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="@+id/tvStreet"
        app:layout_constraintEnd_toStartOf="@+id/tvState"
        app:layout_constraintStart_toEndOf="@+id/tvStreet"
        app:layout_constraintTop_toTopOf="@+id/tvStreet" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblState"
        app:layout_constraintEnd_toEndOf="@+id/tvBackground1"
        app:layout_constraintStart_toEndOf="@+id/lblState"
        app:layout_constraintTop_toTopOf="@+id/lblState" />

    <TextView
        android:id="@+id/lblNeighborhood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/neighborhood"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/lblCity"
        app:layout_constraintEnd_toStartOf="@+id/tvNeighborhood"
        app:layout_constraintStart_toStartOf="@+id/lblStreet"
        app:layout_constraintTop_toBottomOf="@+id/lblStreet" />

    <TextView
        android:id="@+id/tvNeighborhood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblNeighborhood"
        app:layout_constraintEnd_toStartOf="@+id/lblDdd"
        app:layout_constraintStart_toEndOf="@+id/lblNeighborhood"
        app:layout_constraintTop_toTopOf="@+id/lblNeighborhood" />

    <TextView
        android:id="@+id/lblDdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ddd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="@+id/tvNeighborhood"
        app:layout_constraintEnd_toStartOf="@+id/tvDdd"
        app:layout_constraintStart_toEndOf="@+id/tvNeighborhood"
        app:layout_constraintTop_toTopOf="@+id/tvNeighborhood" />

    <TextView
        android:id="@+id/tvDdd"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblDdd"
        app:layout_constraintEnd_toEndOf="@+id/tvBackground1"
        app:layout_constraintStart_toEndOf="@+id/lblDdd"
        app:layout_constraintTop_toTopOf="@+id/lblDdd" />

    <TextView
        android:id="@+id/lblCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/city"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toStartOf="@+id/tvCity"
        app:layout_constraintStart_toStartOf="@+id/lblNeighborhood"
        app:layout_constraintTop_toBottomOf="@+id/lblNeighborhood" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblCity"
        app:layout_constraintEnd_toEndOf="@+id/tvBackground1"
        app:layout_constraintStart_toEndOf="@+id/lblCity"
        app:layout_constraintTop_toTopOf="@+id/lblCity" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/state"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/txtState"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvBackground2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/city"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/txtCity"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/street"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/txtStreet"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBackground2" />

</androidx.constraintlayout.widget.ConstraintLayout>